# http1.1-boost-asio-server

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  main.cpp  old_main.cpp  parse_example.py  run-docker.sh
conf/: check_config.json  default_config.json
examples/: index.html
examples/YoupiBanane/: youpi.bad_extension  youpi.bla
examples/YoupiBanane/kaban/: deleter.py  env_print.py  hello_htmp.py  post.py  script.py  simple_cgi.py  uploader.py
examples/YoupiBanane/nop/: youpi.bad_extension
examples/cgi_checker/: simple_cgi.py
lib_mini_event/: LibMiniEvent.cpp  LibMiniEvent.h  mini_helpers.h
lib_mini_event/events/: DefaultCloseEvent.cpp  DefaultCloseEvent.h  MiniEvent.h
lib_mini_event/modules/poll_module/: PollModule.cpp  PollModule.h
lib_mini_event/sessions/: MiniSession.cpp  MiniSession.h
libjtoc/: Makefile
libjtoc/include/: libjtoc.h
libjtoc/src/: Makefile  ft_atoi.cpp  ft_itoa.cpp  ft_memcpy.cpp  ft_strcpy.cpp  ft_strncmp.cpp  jtoc_parse_number.cpp  jtoc_parse_value.cpp  jtoc_utils2.cpp  jtoc_write_help.cpp
srcs/: Config.cpp  Config.h  SingleCgiHandler.h  WebServer.h  WebServerManager.h  main.cpp
srcs/cgi/: SingleCgiHandler.cpp  SingleCgiHandler.h
srcs/config/: CMakeLists.txt  Config.cpp  Config.h  ConfigParser.cpp  ConfigParser.h  old_conf.cpp  old_config.h  parse_config.cpp  parse_config.h  parse_location.cpp  parse_port_server_config.cpp  parse_server_config.cpp  parser  parser_test_main.cpp
srcs/core/: Connection.h  ConnectionInstance.h  Epoll.cpp  Epoll.h  Event.h  Poll.cpp  Poll.h  ServerInfo.h  ServerInstance.h  WebServer.h  core_helpers.cpp  core_helpers.h
srcs/core/events/: Event.cpp  Event.h  EventMaker.h  EventPresets.cpp  EventPresets.h  HandleHttpRequestEvent.cpp  HandleHttpRequestEvent.h  HandleIncomingDataEvent.cpp  HandleIncomingDataEvent.h  HandleRequestEvent.h  HttpAfterResponseEvent.h  HttpFileSessionReadEvent.h  HttpFileSessionReadZeroEvent.h  HttpProcessRequestEvent.h  HttpReadFileEvent.h  HttpReadFileZeroBytesEvent.h  HttpReadRequestEvent.h  HttpReadRequestZeroBytesEvent.h  HttpSessionAfterResponseEvent.h  HttpSessionProcessRequestEvent.h  HttpSessionReadEvent.h  HttpSessionReadZeroEvent.h  ParseHttpRequestEvent.cpp  ParseHttpRequestEvent.h  ProcessIncomingDataEvent.cpp  ProcessIncomingDataEvent.h  ProcessRequestEvent.h  ServerHandleNewSessionEvent.h  SessionsKillerEvent.h
srcs/core/modules/: EpollModule.cpp  EpollModule.h  PollModule.cpp  PollModule.h
srcs/core/session/: FileSession.h  HttpFileSession.h  HttpSession.cpp  HttpSession.h  ServerSession.h  Session.h
srcs/core/sessions/: HttpFileSession.h  HttpSession.h  ServerSession.h  Session.h
srcs/events/: Event.h  EventMaker.h  HttpFileSessionReadEvent.h  HttpFileSessionReadZeroEvent.h  HttpSessionAfterResponseEvent.h  HttpSessionProcessRequestEvent.h  HttpSessionReadEvent.h  HttpSessionReadZeroEvent.h  SessionsKillerEvent.h
srcs/http/: HeaderValue.cpp  HeaderValue.h  Http.cpp  Http.h  HttpConnection.cpp  HttpConnection.h  HttpErrorCodePages.cpp  HttpErrorCodePages.h  HttpModule.cpp  HttpModule.h  Request.cpp  Request.h  Response.cpp  Response.h  Session.h  common.h
srcs/http/HeaderValue/: BaseHeaderValue.cpp  BaseHeaderValue.h
srcs/http/Request/: AutoindexHandler.cpp  AutoindexHandler.h  CgiHandler.cpp  CgiHandler.h  Request.h  RequestHandler.cpp  RequestHandler.h  RequestParser.cpp  RequestParser.h
srcs/http/errors/: ErrorPages.cpp  ErrorPages.h  Exception.h  HttpErrorCodePages.cpp  HttpErrorCodePages.h  HttpErrorPages.cpp  HttpErrorPages.h  HttpException.cpp  HttpException.h
srcs/http/parse/: .gitignore  Lexer.h  ParseGenerator.cmake  ParserWrapper.cpp  ParserWrapper.h  example_main.cpp  grammar.yack  lexer.h  lexer.l  lexer.lex  main.cpp  parse.cpp  parse.h  parser.y
srcs/http/resource_handlers/: CgiHandler.cpp  CgiHandler.h  FileHandler.cpp  FileHandler.h
srcs/libjtoc/: CMakeCache.txt  CMakeLists.txt  Makefile
srcs/libjtoc/src/: CMakeLists.txt  Makefile  ft_bzero.cpp  ft_isdigit.cpp  ft_memalloc.cpp  ft_strdup.cpp  ft_strhash.cpp  ft_strlen.cpp  ft_strnew.cpp  ft_strsub.cpp  jtoc_get_raw_data.cpp  jtoc_write.cpp
srcs/sessions/: HttpFileSession.h  HttpSession.h  ServerSession.h  Session.h  SessionManager.h
srcs/sessions/EndpointSession/: EndpointSession.cpp  EndpointSession.h
srcs/sessions/HttpSession/: HttpSession.cpp  HttpSession.h
srcs/utilities/: Logging.cpp  Logging.h  Optional.h  SharedPtr.h  log.h  logging.h  utilities.cpp  utilities.h
srcs/web_server/: WebServer.cpp  WebServer.h
srcs/webserver/: WebServer.cpp  WebServer.h
tests/: first_line_parse.cpp  test_fsm_handle_request.cpp  test_handle_request.cpp  test_poll_module.cpp  test_utilities.cpp
